<resources>

    <!--
    Programmer: John VanDyke
    Class ID: jvandyk5713
    Lab #2: Sell Sell Sell
    CIS 2610: Business Mobile Programming
    Fall 2015
    Due date: 10/14/2015
    Date completed: 10/13/15
    *************************************
    The strings.xml file contain strings for each widget in the application.  This is so the MainActivity.java
    file properly identifies the widgets.  This is done so everything can be processed and the widgets are recognized
    and the decisions can be made properly.
    *************************************
    Please note: Be careful where you place XML comments. They are
    best situated outside of each XML element.
    -->

    <string name="app_name">Fruit Stand</string>

    <string name="action_settings">Settings</string>
    <string name="txtViewTitle">What fruit would you like?</string>
    <string name="edtTextFruit">Enter number of fruit here</string>
    <string name="radButtonApple">Apple - $1.00</string>
    <string name="radButtonOrange">Orange - $1.00</string>
    <string name="radButtonGrapes">Box of grapes - $3.00</string>
    <string name="radButtonWatermelon">Watermelon - $6.00</string>
    <string name="btnGetFruit">GET YOUR FRUIT!</string>
    <string name="txtViewFeedback"></string>
</resources>
